# visuo_tactile

./: CMakeLists.txt  README.md  package.xml
hri_static_demo/: CMakeLists.txt  package.xml
hri_static_demo/launch/: hri_static_demo.launch
hri_static_demo/src/: hri_static_demo.cpp
icmSensor/: CMakeLists.txt
icmSensor/src/: icmSensor.cpp
icmSensor/src/gyro-accel_pressure_i2c_v1_filter_ros/: gyro-accel_pressure_i2c_v1_filter_ros.ino
icmSensorAndForce/: CMakeLists.txt
icmSensorAndForce/src/: icmSensorAndForce.cpp
msg/: processArguments.msg
robotiq_griper_control/: CMakeLists.txt  package.xml
robotiq_griper_control/docs/: .~lock.Instructions to run the Robotiq demo.doc#
robotiq_griper_control/src/: robotiq_griper_control.cpp
rq_gripper_2F140/: CMakeLists.txt  package.xml
rq_gripper_2F140/docs/: Instructions to run the Robotiq demo.doc
rq_gripper_2F140/src/: rq_gripper_2F140.cpp
rq_gripper_2F140_tactile_response/: CMakeLists.txt  package.xml
rq_gripper_2F140_tactile_response/docs/: Instructions to run the Robotiq demo.doc
rq_gripper_2F140_tactile_response/src/: rq_gripper_2F140_tactile_response.cpp
scripts/: tactip_data_collection.py
tactip_grid_exploration/: CMakeLists.txt  package.xml
tactip_grid_exploration/launch/: tactip_grid_exploration.launch
tactip_grid_exploration/src/: tactip_grid_exploration.cpp
tactip_letter_exploration/: CMakeLists.txt  package.xml
tactip_letter_exploration/launch/: tactip_letter_exploration.launch
tactip_letter_exploration/src/: tactip_letter_exploration.cpp
(+378 files in other folders)
